# text-app

./: ButtonExt.qml  CMakeLists.txt  ChannelBar.qml  ChatBox.qml  ComboBoxExt.qml  Main.qml  MessageView.qml  ScrollViewExt.qml  TopBar.qml  main.cpp
